--- a/PairingTest.Web/Web.config
+++ b/PairingTest.Web/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="QuestionnaireServiceUri" value="http://localhost:50014/api/Questions" />
+    <add key="QuestionnaireServiceUri" value="http://localhost:50014/" /> <!--api/Questions-->
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
