--- a/PairingTest.Unit.Tests/PairingTest.Unit.Tests.csproj
+++ b/PairingTest.Unit.Tests/PairingTest.Unit.Tests.csproj
@@ -38,6 +38,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -58,6 +62,9 @@
     <Compile Include="QuestionServiceWebApi\QuestionsControllerTests.cs" />
     <Compile Include="QuestionServiceWebApi\Stubs\FakeQuestionRepository.cs" />
     <Compile Include="Web\QuestionnaireControllerTests.cs" />
+    <Compile Include="Web\QuestionnaireManagerTests.cs" />
+    <Compile Include="Web\Stubs\FakeApiClient.cs" />
+    <Compile Include="Web\Stubs\FakeQuestionnaireManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -72,7 +79,9 @@
       <Name>QuestionServiceWebApi</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
